--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,40 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
+    <Button
+        android:id="@+id/btn_create_account"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:text="Create Account"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/btn_get_account_info"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Get Account Info"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_create_account" />
+
+    <Button
+        android:id="@+id/btn_get_mnemonic"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Get Mnemonic"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_get_account_info" />
+
+    <Button
+        android:id="@+id/btn_export_wallet_file"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Export Wallet File"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_get_mnemonic" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
